--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
   },
   "dependencies": {
     "cannon": "^0.6.2",
-    "three": "^0.101.1",
     "gsap": "^1.20.3",
-    "stats.js": "^0.17.0"
+    "stats.js": "^0.17.0",
+    "three": "^0.109",
+    "three-orbitcontrols": "^2.108.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
